--- a/src/main/webapp/bootstrap.css
+++ b/src/main/webapp/bootstrap.css
@@ -5810,10 +5810,10 @@ a.badge:hover {
    height:100%;
    width:100%;
 	background-color:#000;
-   -ms-filter: "Alpha(Opacity=75)";
-   filter:alpha(opacity=75);
-   -moz-opacity: 0.75;
-   opacity: 0.75;
+   -ms-filter: "Alpha(Opacity=60)";
+   filter:alpha(opacity=60);
+   -moz-opacity: 0.60;
+   opacity: 0.60;
 }
 
 .lightBoxArticleView {
@@ -5855,4 +5855,11 @@ a.badge:hover {
 {
 	margin-top: 15px;
 	padding: 8px;
+}
+
+.alignTRight
+{
+	position:absolute;
+	right:14px;
+	top: 14px;
 }
